@@ -38,5 +38,33 @@ JBoss Forge doesn't know how to generate inheritance or Embeddable. In this modu
 * Start WildFly (`$WILDFLY_HOME/bin/standalone.sh`)
 * `mvn -Parquillian-wildfly-remote test` will execute the tests with WildFly up and running and with the application deployed
 
+## Build the application
 
+* Use Maven and build the application with `mvn clean install`
 
+## Deploy the application on WildFly application server
+
+* Start WildFly (`$WILDFLY_HOME/bin/standalone.sh`)
+* Make sure WildFly has enough memory `-Xms64m -Xmx1024m -XX:MaxPermSize=512m -Djava.net.preferIPv4Stack=true`
+* Go to the [admin console](http://localhost:9990/)
+* Deploy the `cdbookstore/target/cdbookstore.war` file in _Runtime -> Manage Deployments -> Add -> Enable_
+
+## Check the web application
+
+* With a browser go to [http://localhost:8080/cdbookstore]()
+* Thanks to inheritance, now the Item page shows both Books and CDs
+
+## Check the REST interfaces
+
+* The following REST interfaces are defined
+* [http://localhost:8080/cdbookstore/rest/authors]()
+* [http://localhost:8080/cdbookstore/rest/books]()
+* [http://localhost:8080/cdbookstore/rest/cds]()
+* [http://localhost:8080/cdbookstore/rest/customers]()
+* [http://localhost:8080/cdbookstore/rest/musicians]()
+* [http://localhost:8080/cdbookstore/rest/purchaseorders]()
+* Use [PostMan REST client](https://chrome.google.com/webstore/detail/postman-rest-client/fdmmgilgnpjigdojojpjoooidkmcomcm) to create/update/remove entities
+
+## Backup your code
+
+* Save a backup of your code at `../after/03-Domain/`
